--- a/README.Rmd
+++ b/README.Rmd
@@ -1,4 +1,5 @@
 ---
+always_allow_html: yes
 output: github_document
 ---
 
@@ -20,17 +21,17 @@ The Rfssa package provides the collections of necessary functions to implement F
 
 The use of the package starts with the decomposition of the functional time series using fssa. Then a suitable grouping of the principal compomnents is required for reconstruction. This can be done heuristically by looking at the plots of the decomposition (plot). Alternatively, one can examine the weighted correlation (w-correlation) matrix (fwcor). The final step is the reconstruction of the principal components into additive functional time series whose sum approximates the original univariate or multivariate functional time series (freconstruct).
 
-## Updated Functionality
+# Updated Functionality
 
 This version of the Rfssa package includes updates to existing functions including fssa, plot, wplot, and freconstruct. Multivariate functional singular spectrum analysis (mfssa) was added to the package in fssa to allow the user to perform embedding and decomposition of a multivariate FTS. The reconstruction stage in freconstruct was also updated to allow for reconstruction (including Hankelization) of multivariate FTS objects using multivariate FSSA objects that come from mfssa. Plotting options for FSSA objects in plot were also updated so that the user can now plot left singular functions, right singular vectors, left singular function heat diagrams, and periodograms. FSSA plotting options also allow the user to specify which particular components they want to plot. For example, a user can specify that they want to see a paired-plot of only the third and fourth component. The 'meanvectors' and 'meanpaired' options were removed as these are satisfied with 'paired' and 'vectors' options. The 'efunctions' and 'efunctions2' options were also removed in lieu of the addition of the left singular function heat map option. The user can also specify the 'cuts' parameter in wplot to make visualization of the w-correlation matrix easier.
 
-## New Functionality
+# New Functionality
 
 This version of the Rfssa package also includes new functions for converting functional data (FD) objects to FTS objects, arithmetic, indexing, correlation, and plotting of FTS data. The user is able to convert an FD object to an FTS object using fts. The user can also perform addition, subtraction, and multiplication of FTS objects with other FTS objects or FTS objects with scalars by using '+', '-', and '*' respectively. The package also allows for indexing of FTS objects by using '['. The user can also measure the unweighted correlation between FTS objects by using cor.fts. The plotting of FTS objects can be performed using plot which uses the plotly package for visualization .
 
 The package update also includes a new shiny app (launchApp) that can be used for demonstrations of univariate or multivariate FSSA depending on the type that is specified. The app allows the user to explore FSSA with simulated data, data that is provided on the server, or data that the user provides. It allows the user to change parameters as they please, gives visual results of the methods, and also allows the user to compare FSSA results to other spectrum analysis methods such as multivariate singular spectrum analysis. The tool is easy to use and can act as a nice starting point for a user that wishes to perform FSSA as a part of their data analysis.
 
-## Installation
+# Installation
 
 You can install Rfssa from github with:
 
@@ -71,12 +72,12 @@ plot(U,d=10,type="paired")
 plot(U,d=10,type="wcor")
 gr <- list(1,2:3,4:5,6:7,8:20)
 Q <- freconstruct(U, gr)
-plot(Y,main="Call Numbers(Observed)")
-plot(Q[[1]],main="1st Component")
-plot(Q[[2]],main="2nd Component")
-plot(Q[[3]],main="3rd Component")
-plot(Q[[4]],main="4th Component")
-plot(Q[[5]],main="5th Component(Noise)")
+plot(Y[[1]],main="Call Numbers (Observed)")
+plot(Q[[1]][[1]],main="1st Component")
+plot(Q[[2]][[1]],main="2nd Component")
+plot(Q[[3]][[1]],main="3rd Component")
+plot(Q[[4]][[1]],main="4th Component")
+plot(Q[[5]][[1]],main="5th Component(Noise)")
 
 
 ## Multivariate FSSA Example on Bivariate Satelite Image Data
@@ -101,10 +102,8 @@ y_EVI <- smooth.basis(u,as.matrix(D0_EVI),basis)$fd
 y=list(y_NDVI,y_EVI)
 ## Define functional time series
 Y=fts(y)
-plot(Y,npts = 100, type = 'line')
-plot(Y,npts = 100, type = '3Dsurface', var=1)
-plot(Y,npts = 100, type = '3Dsurface', var=2)
-plot(Y,npts = 100, type = 'heatmap')
+plot(Y[[1]],npts = 100, main='NDVI')
+plot(Y[[2]],npts = 100, main='EVI')
 L=45
 ## Multivariate functional singular spectrum analysis
 U=fssa(Y,L)
@@ -118,11 +117,10 @@ plot(U,d=10,type='wcor')
 plot(U,d=10,type='periodogram')
 plot(U,d=10,type='vectors')
 recon <- freconstruct(U = U, group = list(c(1),c(2,3),c(4)))
-plot(recon[[1]],npts = 100,type = '3Dsurface',var=1)
-plot(recon[[2]],npts = 100,type = '3Dsurface',var=1)
-plot(recon[[3]],npts = 100,type = '3Dsurface',var=1)
-plot(recon[[1]],npts = 100,type = '3Dsurface',var=2)
-plot(recon[[2]],npts = 100,type = '3Dsurface',var=2)
-plot(recon[[3]],npts = 100,type = '3Dsurface',var=2)
-
+plot(recon[[1]][[1]], main = "NDVI Trend")
+plot(recon[[2]][[1]], main = "NDVI Oscillation")
+plot(recon[[3]][[1]], main = "NDVI Oscillation 2")
+plot(recon[[1]][[2]], main = "EVI Trend")
+plot(recon[[2]][[2]], main = "EVI Oscillation")
+plot(recon[[3]][[2]], main = "EVI Oscillation 2")
 ```
