--- a/README.Rmd
+++ b/README.Rmd
@@ -31,6 +31,10 @@ This version of the Rfssa package also includes new functions for converting fun
 
 The package update also includes a new shiny app (launchApp) that can be used for demonstrations of univariate or multivariate FSSA depending on the type that is specified. The app allows the user to explore FSSA with simulated data, data that is provided on the server, or data that the user provides. It allows the user to change parameters as they please, gives visual results of the methods, and also allows the user to compare FSSA results to other spectrum analysis methods such as multivariate singular spectrum analysis. The tool is easy to use and can act as a nice starting point for a user that wishes to perform FSSA as a part of their data analysis.
 
+# README Notes
+
+The reader should note that we do not utilize FTS plotting options in this README that are included in this update because of the large size of the resulting files. The reader should refer to the 'help' of fssa to see the same example but with the utilization of the new FTS plotting options.
+
 # Installation
 
 You can install Rfssa from github with:
