--- a/README.Rmd
+++ b/README.Rmd
@@ -48,23 +48,33 @@ devtools::install_github("haghbinh/Rfssa")
 
 This is a basic example which shows you how to use fssa algorithm to analyze a univariate or multivariate functional time series:
 
-```{r example, eval = TRUE, message=FALSE, warning=FALSE}
 ## Univariate FSSA Example on Callcenter data
+```{r example 1, eval = TRUE, message=FALSE, warning=FALSE}
 data("Callcenter")
 require(fda)
 require(Rfssa)
+```
+
 ## Define functional objects
+```{r example2, eval = TRUE, message=FALSE, warning=FALSE}
 D <- matrix(sqrt(Callcenter$calls),nrow = 240)
 N <- ncol(D)
-time <- 1:N
+time <- seq(ISOdate(1999,1,1), ISOdate(1999,12,31), by="day")
 K <- nrow(D)
 u <- seq(0,K,length.out =K)
 d <- 22 #Optimal Number of basis elements
 basis <- create.bspline.basis(c(min(u),max(u)),d)
 Ysmooth <- smooth.basis(u,D,basis)
+```
+
 ## Define functional time series
-Y <- fts(Ysmooth$fd)
+```{r example3, eval = TRUE, message=FALSE, warning=FALSE}
+Y <- fts(Ysmooth$fd,time = time)
+plot(Y,ylab = "Sqrt of Callcenter", xlab = "Intraday intervals")
+```
+
 ## Univariate functional singular spectrum analysis
+```{r example4, eval = TRUE, message=FALSE, warning=FALSE}
 L <- 28
 U <- fssa(Y,L)
 plot(U,d=13)
@@ -73,58 +83,73 @@ plot(U,d=9,type="lcurves")
 plot(U,d=9,type="vectors")
 plot(U,d=10,type="periodogram")
 plot(U,d=10,type="paired")
-plot(U,d=10,type="wcor")
+plot(U,d=20,type="wcor")
 gr <- list(1,2:3,4:5,6:7,8:20)
 Q <- freconstruct(U, gr)
-plot(Y[[1]],main="Call Numbers (Observed)")
-plot(Q[[1]][[1]],main="1st Component")
-plot(Q[[2]][[1]],main="2nd Component")
-plot(Q[[3]][[1]],main="3rd Component")
-plot(Q[[4]][[1]],main="4th Component")
-plot(Q[[5]][[1]],main="5th Component(Noise)")
+plot(Q[[1]],main="1st Component",ylab = " ", xlab = "Intraday intervals")
+plot(Q[[2]],main="2nd Component",ylab = " ", xlab = "Intraday intervals")
+plot(Q[[3]],main="3rd Component",ylab = " ", xlab = "Intraday intervals")
+plot(Q[[4]],main="4th Component",ylab = " ", xlab = "Intraday intervals")
+plot(Q[[5]],main="5th Component(Noise)",ylab = " ", xlab = "Intraday intervals")
+```
 
-
+### Other visiualisation types for object of class "fts":  
+```{r example5, eval = TRUE, message=FALSE, warning=FALSE}
+plot(Q[[1]], type="3Dsurface",
+     main="1st Component",ylab = " ", xlab = "Intraday intervals")
+plot(Q[[2]][1:60], type="heatmap",
+     main="2nd Component",ylab = " ", xlab = "Intraday intervals")
+plot(Q[[3]][1:60], type = "3Dline",
+     main="3rd Component",ylab = " ", xlab = "Intraday intervals")
+```
 ## Multivariate FSSA Example on Bivariate Satelite Image Data
-require(fda)
-require(Rfssa)
-## Raw image data
-NDVI=Jambi$NDVI
-EVI=Jambi$EVI
+```{r example6, eval = TRUE, message=FALSE, warning=FALSE}
+NDVI <- Jambi$NDVI
+EVI <- Jambi$EVI
+time <- Jambi$Date
+```
+
 ## Kernel density estimation of pixel intensity
+```{r example7, eval = TRUE, message=FALSE, warning=FALSE}
 D0_NDVI <- matrix(NA,nrow = 512, ncol = 448)
 D0_EVI <- matrix(NA,nrow =512, ncol = 448)
 for(i in 1:448){
   D0_NDVI[,i] <- density(NDVI[,,i],from=0,to=1)$y
   D0_EVI[,i] <- density(EVI[,,i],from=0,to=1)$y
 }
+```
+
 ## Define functional objects
+```{r example8, eval = TRUE, message=FALSE, warning=FALSE}
 d <- 11
 basis <- create.bspline.basis(c(0,1),d)
 u <- seq(0,1,length.out = 512)
 y_NDVI <- smooth.basis(u,as.matrix(D0_NDVI),basis)$fd
 y_EVI <- smooth.basis(u,as.matrix(D0_EVI),basis)$fd
-y=list(y_NDVI,y_EVI)
+y <- list(y_NDVI,y_EVI)
+```
+
 ## Define functional time series
-Y=fts(y)
-plot(Y[[1]],npts = 100, main='NDVI')
-plot(Y[[2]],npts = 100, main='EVI')
-L=45
+```{r example9, eval = TRUE, message=FALSE, warning=FALSE}
+Y <- fts(y,time=time)
+plot(Y[1:100],ylab = c("NDVI","EVI"),main = "Probability Kernel Density")
+```
+
 ## Multivariate functional singular spectrum analysis
-U=fssa(Y,L)
+```{r example10, eval = TRUE, message=FALSE, warning=FALSE}
+L <- 45
+U <- fssa(Y,L)
 plot(U,d=10,type='values')
 plot(U,d=10,type='paired')
 plot(U,d=10,type='lheats', var = 1)
 plot(U,d=10,type='lcurves',var = 1)
 plot(U,d=10,type='lheats', var = 2)
 plot(U,d=10,type='lcurves',var = 2)
-plot(U,d=10,type='wcor')
-plot(U,d=10,type='periodogram')
-plot(U,d=10,type='vectors')
+plot(U,d=20,type='wcor')
+
 recon <- freconstruct(U = U, group = list(c(1),c(2,3),c(4)))
-plot(recon[[1]][[1]], main = "NDVI Trend")
-plot(recon[[2]][[1]], main = "NDVI Oscillation")
-plot(recon[[3]][[1]], main = "NDVI Oscillation 2")
-plot(recon[[1]][[2]], main = "EVI Trend")
-plot(recon[[2]][[2]], main = "EVI Oscillation")
-plot(recon[[3]][[2]], main = "EVI Oscillation 2")
+plot(recon[[1]],ylab = c("NDVI","EVI"), main = "Trend Components")
+plot(recon[[2]],ylab = c("NDVI","EVI"), main = "Oscillation Components")
+plot(recon[[3]],ylab = c("NDVI","EVI"), main = "Second Oscillation Components")
 ```
+
